# postgis-integration

./: .dockerignore  .env  .gitignore  Dockerfile  Jenkinsfile  README.md  index.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: docker-publish.yml  node.js.yml
datasets/: index.js
datasets/adminexpress/: README.md  config.json  import.js  import.py
datasets/ban/: config.json  import-dep.js  import.js
datasets/bdtopo/: README.md  import.py  themes.yaml
datasets/cadastre/: config.json  import.js
datasets/cadastre-etalab/: .gitignore  config.json  departements.json  import-dep.js  import.js
datasets/codes-postaux/: import.js
datasets/codes_postaux/: README.md  import.py
datasets/cog/: config.json  import.js
datasets/cog-commune/: config.json  import.js
datasets/dila/: config.json  import.js
datasets/dvf/: config.json  import.js
datasets/geosirene/: config.json  import-dep.js  import.js
datasets/laposte/: config.json  import.js
datasets/naturalearth/: README.md  config.json  import.js  import.py
datasets/osm/: README.md  import.py  zones.yaml
datasets/osm_france/: import.py
datasets/roadgraph/: README.md  config.json  import.js
doc/: todo-datasets.json
helper/: Context.js  DataDir.js  Database.js  DatasetDir.js  GeoportalDownloadClient.js  Metadata.js  SourceManager.js  backup.js  createDataDir.js  download.js  extract.js  index.js  ogr2pg.js  psql.js
helpers/: config.py  db.py  gdal.py  http.py  storage.py
metadata/: add.js  index.js  init.js  remove.js
resources/: departements.js
tests/: datasets.js
(+48 files in other folders)
