[project]
name = "postgis-integration"
version = "0.1.0"
description = "Helpers to load sample datasets in postgis"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "patool>=4.0.1",
    "pyunpack>=0.3",
    "wget>=3.2",
    "psycopg2-binary>=2.9.10",
    "owslib>=0.35.0",
    "dotenv>=0.9.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
